--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,16 +1,15 @@
 @import 'tailwindcss';
 
 @theme {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
+	--color-background: var(--background);
+	--color-foreground: var(--foreground);
 }
 
 @theme {
-  --color-gradient: 177deg, #241638 2.6%, #1f3149 49.05%, #17223e 98.37%;
-  --color-linear-gradient-button: 177deg, #f0c777 0%, #f3cb7e 100%;
-  --color-radial-gradient-button: 43.74% 100% at 50% 0%,
-    rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%;
-  --color-gradient-button-shadow: 0px 3px 0px 0px #886b34;
+	--color-gradient: 177deg, #241638 2.6%, #1f3149 49.05%, #17223e 98.37%;
+	--color-linear-gradient-button: 177deg, #f0c777 0%, #f3cb7e 100%;
+	--color-radial-gradient-button: 43.74% 100% at 50% 0%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%;
+	--color-gradient-button-shadow: 0px 3px 0px 0px #886b34;
 }
 
 /*
@@ -22,13 +21,13 @@
   color utility to any element that depends on these defaults.
 */
 @layer base {
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-gray-200, currentColor);
-  }
+	*,
+	::after,
+	::before,
+	::backdrop,
+	::file-selector-button {
+		border-color: var(--color-gray-200, currentColor);
+	}
 }
 
 .button {
@@ -54,4 +53,17 @@
 	letter-spacing: 0.7px;
 	text-transform: uppercase;
 	width: fit-content;
+}
+
+.button-mobile {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 45px;
+	height: 40px;
+	padding: 12px;
+	border-radius: 16px;
+	background: radial-gradient(43.74% 100% at 50% 0%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%),
+		linear-gradient(90deg, #f0c777 0%, #f3cb7e 100%);
+	box-shadow: 0px 3px 0px 0px #886b34;
 }
