--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,9 +3,6 @@
 @theme {
 	--color-background: var(--background);
 	--color-foreground: var(--foreground);
-}
-
-@theme {
 	--color-gradient: 177deg, #241638 2.6%, #1f3149 49.05%, #17223e 98.37%;
 	--color-linear-gradient-button: 177deg, #f0c777 0%, #f3cb7e 100%;
 	--color-radial-gradient-button: 43.74% 100% at 50% 0%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%;
@@ -66,4 +63,11 @@
 	background: radial-gradient(43.74% 100% at 50% 0%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%),
 		linear-gradient(90deg, #f0c777 0%, #f3cb7e 100%);
 	box-shadow: 0px 3px 0px 0px #886b34;
+}
+
+.text-gradient {
+	background: linear-gradient(90deg, #bfd0ef -6.86%, #fff 52.54%, #d9b6e0 107.37%);
+	background-clip: text;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
